--- a/TODO
+++ b/TODO
@@ -1,6 +1,8 @@
-TODO hla dq antijeni hastada silinsin 
-TODO hasta donor yer degissin eslesmelerde
-TODO kayit update lazim
+hla dq antijeni hastada silinsin
+
+hasta donor yer degissin eslesmelerde
+
+kayit update lazim
 
 dqb2 yerine dqa1 yapacagiz lsa class2
 
